--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uz.unzosoft.mvvmcouroutinelivedataretrofit2dagger_hilt">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name="uz.unzosoft.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
