--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,21 @@ dependencies {
      */
     implementation("io.coil-kt:coil:1.1.1")
 
+    def lifecycle_version = "2.0.0"
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+// alternatively - just ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version" // For Kotlin use lifecycle-viewmodel-ktx
+// alternatively - just LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+// alternatively - Lifecycles only (no ViewModel or LiveData). Some UI
+//     AndroidX libraries use this lightweight import for Lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.4'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
+
+
 
 }
